data/derived/comb/progs/unify/prog1327.ml.out
Characters 78-84:
  | Sine s -> "pi* " exprToString s;;
              ^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
